# chronow

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  coverage.yml  publish.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
conformance/cases/: _metadata.json  diff_compare.json  duration_parsing.json  interval_check.json  iso_rfc3339.json  natural_language_intent.json  recurrence_business.json  snap_to.json  timezone_dst.json  zone_info.json
conformance/runner/: README.md  run.py
conformance/upstream/: dayjs.json  luxon.json  pendulum.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
docs/: agent-workflow-patterns.md  architecture.md  benchmarks.md  dst-failure-modes.md  getting-started.md  migration-guide.md
mcp/: Cargo.toml
mcp/src/: main.rs
scripts/: extract_upstream_behavior.js  extract_upstream_pendulum.py  generate_conformance_cases.py
spec/: temporal-contract.md  upstream-behavior-discovery.md
