[workspace]
resolver = "2"
members = [
  "crates/core",
  "cli",
  "mcp",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.1"

[workspace.dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.45", features = ["derive"] }
regex = "1.12.2"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
iana-time-zone = "0.1"
tokio = { version = "1", features = ["full"] }
