[package]
name = "chronow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chronow"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
clap_complete = "4"
chronow-core = { path = "../crates/core" }
